* Changelog for Simple Trainer

** [2021-07-31 Sat 20:46]
   - Added ChangeLog
   - Added ~common-pyutil~ and removed redundant functionality.
   - Added typing annotations and ~py.typed~
   - Added ~poetry~ configuration.
   - Added some more tests.
   - Separated ~pipeline.py~
   - Version bump to `0.3.0`.

** [2022-04-13 Wed 10:44]
   - Fixed ~post_batch_progress~ function
   - Added ~logdir~ and ~savedir~ as arguments to trainer.
   - Put ~model.eval()~ and ~torch.no_grad()~ before evaluating batch
   - There's commented code also for batch time logging. It should be integrated
     with controls

** [2022-07-22 Fri 09:20]
   - A bit more progress on ~interface~
   - Shutdown via request works on ~interface~ now
   - Added ~iface~ to ~fixtures.py~